Fix horizontal overflow issue with .container-fluid.

--- a/public/css/common/common.css
+++ b/public/css/common/common.css
@@ -29,3 +29,7 @@ footer {
 a h5.card-header{
     color: #00ffbe;
 }
+
+body {
+    overflow-x: hidden;
+}
